--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
   },
   "dependencies": {
     "vue": "^3.2.45",
-    "vue-router": "^4.1.6"
+    "vue-router": "^4.1.6",
+    "vue3-openlayers": "^0.1.71"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^4.0.0",
