--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "axios": "^1.2.2",
     "vue": "^3.2.45",
     "vue-router": "^4.1.6",
     "vue3-openlayers": "^0.1.71"
@@ -20,6 +21,7 @@
     "tailwindcss": "^3.2.4",
     "typescript": "^4.9.3",
     "vite": "^4.0.0",
+    "vue-jsonp": "^2.0.0",
     "vue-tsc": "^1.0.11"
   }
 }
