--- a/package.json
+++ b/package.json
@@ -6,10 +6,12 @@
   "scripts": {
     "dev": "vite",
     "build": "vue-tsc && vite build",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "deploy": "gh-pages -d dist"
   },
   "dependencies": {
     "axios": "^1.2.2",
+    "gh-pages": "^5.0.0",
     "vue": "^3.2.45",
     "vue-router": "^4.1.6",
     "vue3-openlayers": "^0.1.71"
